--- a/.gitignore
+++ b/.gitignore
@@ -632,3 +632,10 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/rider,visualstudio,visualstudiocode,node
 BoardGameTracker.Host/images/cover/
 BoardGameTracker.Host/images/profile/
+
+### AI Agent Configuration ###
+# Agent-specific configuration files
+.claude/
+.cline/
+.codex/
+.copilot/
