--- a/BoardGameTracker.Host/BoardGameTracker.Host.csproj
+++ b/BoardGameTracker.Host/BoardGameTracker.Host.csproj
@@ -6,11 +6,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-        <SpaRoot>..\boardgametracker.client\</SpaRoot>
-        <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
-        <SpaProxyServerUrl>http://192.168.72.66:5443</SpaProxyServerUrl>
-        <Version>0.0.1</Version>
-    </PropertyGroup>
+          <SpaRoot>..\boardgametracker.client\</SpaRoot>
+          <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
+          <SpaProxyServerUrl>http://localhost:5443</SpaProxyServerUrl>
+          <Version>0.0.1</Version>
+      </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="8.0.3" />
