--- a/.gitignore
+++ b/.gitignore
@@ -647,3 +647,9 @@ AI_AGENT_CODING_CONSTITUTION.md
 ### Local/remote deployment scripts (do not track)
 OMV800_*
 deploy-to-omv800.sh
+deploy_to_omv800.sh
+deploy_to_omv800.ps1
+SIMPLE_DEPLOYMENT_GUIDE.md
+DEPLOY_COMMANDS.md
+FINAL_DEPLOYMENT_INSTRUCTIONS.md
+FIX_SUMMARY.md
